CHANGELOG

Version 0.2.1:
	[marcelo vanzin]
	- set the serialVersionUID field for class P4Config to avoid
	  serialization problems.
	- fix possible deadlock in P4Change.java (same fix as was already
	  there in AsynP4Action.java)
	- fix NPE in P4Shell.java when console wasn't yet active.
	- keep list of child actions in P4FileMenu.java so we can set
	  their viewer instance.
	- reworked a lot of the threading code; should be less prone to
	  deadlocks. Also, make use of new code added to CommonControls.
	- install perforce mode file.
	- file filters now correctly ignores files with head action "delete"

Version 0.2.0:
	[marcelo vanzin]
	- initial release to plugin central.
