@@ -65,7 +65,8 @@ public class P4FileMenu extends Action {
             addAction(new P4FileAction("add",    false));
             addAction(new P4FileAction("delete", false));
             addAction(new P4FileAction("reopen", false, false));
-            addAction(new P4Stat());
+            addAction(new P4FileInfoAction("fstat"));
+            addAction(new P4FileInfoAction("filelog"));
             addAction(new P4Submit(true));
         }
         return fileMenu;
